<resources>
    <string name="app_name">차로</string>
    <string name="title_home_eng">Home</string>
    <string name="title_home_kor">구경하기</string>
    <string name="title_write_eng">Write</string>
    <string name="title_write_kor">작성하기</string>
    <string name="title_charo_eng">Charo</string>
    <string name="title_charo_kor">나의 차로</string>
    <string name="main_charo_logo">로고</string>
    <string name="main_charo_search">검색</string>
    <string name="main_charo_notice">알림</string>
    <string name="main_charo_pick">이번주 차로\'S PICK</string>
    <string name="main_charo_today_drive">차로의 \'오늘 드라이브\'</string>
    <string name="main_charo_today_drive_title">해안 도로 정복할 수 있는\n포항 드라이브 코스 다같이\n지금 바로 출발해요</string>
    <string name="main_charo_today_drive_chip">#7번 국도</string>
    <string name="main_charo_today_drive_chip_2">#바다</string>
    <string name="main_charo_today_drive_chip_3">#포항</string>
    <string name="main_charo_theme">테마</string>
    <string name="main_charo_theme_name">#벚꽃</string>
    <string name="main_charo_hot_drive">요즘 뜨는 드라이브 코스</string>
    <string name="main_charo_hot_drive_plus">더보기</string>
    <string name="main_charo_hot_drive_title">해안도로 정복할 수있는 포항 드라이브 코스</string>
    <string name="main_charo_night_dirve">여름 맞이 야간 드라이브</string>
    <string name="main_charo_locaion_dirve">경기도 드라이브 코스</string>
    <string name="main_charo_viewpager_text">차로와 함께\n즐기는\n드라이브 코스</string>
    <string name="main_charo_viewpager_hashtag">#날씨도좋은데#바다와함께라면</string>
    <string name="main_charo_more_view_title">요즘 뜨는 드라이브 코스</string>
    <string name="main_charo_more_view_count">전체 %d개 게시물</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_charo_more_filter">인기순</string>
    <string name="main_charo_more_title">해얀도로 정복할 수 있는 포항 드라이브 코스</string>
    <string name="search">드라이브 맞춤 검색</string>
    <string name="search_user_id">배희진희진님의</string>
    <string name="search_custom">맞춤 코스를 찾아 드릴게요</string>
    <string name="search_start">검색하기</string>
    <string name="et_title">제목을 입력해주세요</string>
    <string name="how_your_drive">이번에 다녀오신 드라이브는 어떠셨나요?\n사진을 첨부해 기록으로 남겨보세요 (0/6)</string>
    <string name="which_location">드라이브 코스 지역</string>
    <string name="select_location">도/광역시, 시 단위로 선택해주세요</string>
    <string name="unit_do">도 단위</string>
    <string name="unit_si">시 단위</string>
    <string name="which_theme">테마</string>
    <string name="region">도 단위</string>
    <string name="city">시 단위</string>
    <string name="theme1">테마1</string>
    <string name="theme2">테마2</string>
    <string name="theme3">테마3</string>
    <string name="is_parking">주차 공간</string>
    <string name="parking_yes">있음</string>
    <string name="parking_no">없음</string>
    <string name="parking_description">주차공간에 대해 적어주세요. 예) 주차장이 협소해요.</string>
    <string name="warning">주의사항</string>
    <string name="select_caution">드라이브 시 주의해야 할 요소들을 선택해주세요.</string>
    <string name="warning_crowded">사람많음</string>
    <string name="warning_difficult">초보힘듦</string>
    <string name="warning_mountain">산길포함</string>
    <string name="warning_highway">고속도로</string>
    <string name="course_description">코스 설명</string>
    <string name="hint_my_drive">앞서 담지 못한 드라이브 코스에 대한 소개 및 표현을 자유롭게 해주세요.</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="know_adress">출발지에서 목적지까지의 주소를 알려주세요</string>
    <string name="notify_adress">출발지 주소란을 클릭하시면 지도 페이지로 연결됩니다.</string>
    <string name="start_adress">출발지 주소</string>
    <string name="mid_adress">경유지 주소 입력은 필수가 아닙니다</string>
    <string name="end_adress">목적지 주소</string>
    <string name="text_map">주소 입력 완료시 경로가 표현됩니다</string>
    <string name="select_theme">드라이브 코스를 표현할 수 있는 키워드를 선택해주세요. (최대 3개)</string>
    <string name="today_drive">오늘 드라이브는</string>
    <string name="area">지역</string>
    <string name="area_province">지역(도)</string>
    <string name="area_region">지역(시)</string>
    <string name="caution">주의사항</string>
    <string name="search_text_1">에 있는</string>
    <string name="search_text_2">에 어울리는 코스로</string>
    <string name="search_text_3">은 피하고 싶어요</string>
    <string-array name="search_spinner">
        <item>인기순</item>
        <item>최신순</item>
    </string-array>
    <string name="spinner_more_view_text_1">인기순</string>
    <string name="spinner_more_view_text_2">최신순</string>
    <string name="my_charo_title">MY PAGE</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="my_charo_board_count">전체 6개 게시물</string>
    <string name="my_charo_filter_hot">인기순</string>
    <string-array name="my_page_filter">
        <item>인기순</item>
        <item>최신순</item>
    </string-array>
    <string name="blossom">#벚꽃</string>
    <string name="title_activity_no_search">NoSearchActivity</string>
    <string name="search_activity">드라이브 맞춤 검색 결과</string>
    <string name="search_mention">검색조건에 맞는 드라이브 코스가 없습니다.\n직접 나만의 드라이브 코스를\n만들어보는 것은 어떤가요?</string>
    <string name="search_write">드라이브 코스 작성하기</string>
    <string name="signin_login">로그인</string>
    <string name="signin_signup">회원가입</string>
    <string name="start">출발지를 입력해주세요.</string>
    <string name="end">도착지를 입력해주세요.</string>
    <string name="middle">경유지를 입력해주세요.</string>
    <string name="auto_search">검색어를 입력해주세요</string>
    <string name="skip">SKIP</string>
    <string name="looking">구경해요!</string>
    <string name="on_boarding_1">사람들의 드라이브 경험을\n자유롭게 구경해보세요</string>
    <string name="searching"> 검색해요!</string>
    <string name="on_boarding_2">원하는 지역과 테마로\n맞춤 드라이브 코스를 찾아보세요</string>
    <string name="writing">작성해요!</string>
    <string name="on_boarding_3">나만의 드라이브 코스를\n기록하고 공유해보세요.</string>
    <string name="theme_mountain">산</string>
    <string name="theme_sea">바다</string>
    <string name="theme_lake">호수</string>
    <string name="theme_river">강</string>
    <string name="theme_spring">봄</string>
    <string name="theme_summer">여름</string>
    <string name="theme_fall">가을</string>
    <string name="theme_winter">겨울</string>
    <string name="theme_ocean_drive">해안도로</string>
    <string name="theme_blossom">벚꽃</string>
    <string name="theme_maple">단풍</string>
    <string name="theme_relax">여유</string>
    <string name="theme_speed">스피드</string>
    <string name="theme_night_view">야경</string>
    <string name="theme_city">도심</string>
    <string name="sign_up">회원가입</string>
    <string name="email_id">이메일 아이디</string>
    <string name="email_answer">이용할 이메일을 입력해주세요</string>
    <string name="email_hint">ex)charorong@gmail.com</string>
    <string name="email_number">이메일 인증번호</string>
    <string name="email_number_input">이메일로 보내드린 인증번호를 입력해주세요.</string>
    <string name="resend">재전송</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">5자 이상 15자 이내의 비밀번호를 입력해주세요.</string>
    <string name="input_password_hint">5이상 15자 이내의 영문/숫자/특수문자</string>
    <string name="input_password_reconfirm_hint">비밀번호를 한번 더 작성해주세요</string>
    <string name="start_point">출발지</string>
    <string name="via_point">경유지</string>
    <string name="end_point">도착지</string>
    <string name="like_count">%1$d명이 좋아해요</string>
    <string name="course_description_length">%1$d/280자</string>
    <string name="region1">%1$s</string>
    <string name="region2">%1$s %2$s</string>
    <string name="profile_img_input">프로필 사진을 등록해 주세요</string>
    <string name="write_nickname">닉네임을 작성해 주세요</string>
    <string name="input_nickname">5자 이내 한글</string>
    <string name="accept_term">약관 동의</string>
    <string name="input_accept_term">전체 동의</string>
    <string name="input_accpet_term_push">(선택) 마케팅 푸시 수신 동의</string>
    <string name="input_accpet_term_see">보기</string>
    <string name="input_accept_term_email">(선택) 마케팅 이메일 푸시 수신 동의</string>
    <string name="sign_up_start">시작하기</string>
    <string name="setting">설정</string>
    <string name="access">접근허용</string>
    <string name="image">사진</string>
    <string name="marketing_agree">마케팅 활용 및 광고 수신 동의</string>
    <string name="email_agree">이메일 수신 동의</string>
    <string name="account">계정</string>
    <string name="profile_update">프로필 수정</string>
    <string name="password_update">비밀번호 수정</string>
    <string name="password_search">비밀번호 찾기</string>
    <string name="temporary_password">임시 비밀번호 발급</string>
    <string name="password_search_content">가입하신 이메일 주소로 임시 비밀번호가 발급됩니다.\n로그인 후 꼭 비밀번호를 변경해주세요.</string>
    <string name="password_search_hint">이메일 아이디를 입력해주세요</string>
    <string name="temporary_password_send">임시 비밀번호 전송</string>
    <string name="email">이메일</string>
    <string name="information">정보</string>
    <string name="notice">공지사항</string>
    <string name="cs">고객센터</string>
    <string name="cs_query">1:1 문의</string>
    <string name="report">신고하기</string>
    <string name="terms">약관</string>
    <string name="privacy">개인정보 처리방침</string>
    <string name="service">서비스 이용약관</string>
    <string name="open_source">오픈소스 라이선스</string>
    <string name="version">버전 정보</string>
    <string name="version_num">1.0</string>
    <string name="logout">로그아웃</string>
    <string name="user_out">회원탈퇴</string>
    <string name="change_profile_image">프로필 사진 바꾸기</string>
    <string name="nick_name">닉네임</string>
    <string name="perfect">완료</string>
    <string name="normal_image">기본 이미지 설정</string>
    <string name="select_library">라이브러리에서 선택</string>
    <string name="look_at">둘러보기</string>
    <string name="drive_mate">당신의 드라이브 메이트</string>
    <string name="email_login">이메일 로그인</string>
    <string name="email_sign_up">이메일로 가입</string>
    <string name="google_sign_in">Google 로그인</string>
    <string name="like">좋아요</string>
    <string name="log_out">로그아웃 하시겠습니까?</string>
    <string name="ok">예</string>
    <string name="no">아니요</string>
    <string name="withdrawal">계정을 삭제하시겠습니까?\n회원 탈퇴시 계정이 모두 삭제됩니다.\n(단,작성하신 글은 익명의 형태로 남아
    사용자에게 보여집니다.)</string>
    <string name="cancel">취소</string>
    <string name="agreement">확인</string>
    <string name="firebase_auth_id">273821551567-b6hf2a71g95dvvmfbcua17u8enre95rt.apps.googleusercontent.com</string>
    <string name="origin_password">기존 비밀번호</string>
    <string name="password_update_hint">5이상 15자 이내의 영문과 숫자</string>
    <string name="auth_num_hint">숫자 6자리</string>
    <string name="new_password_update">새 비밀번호</string>
    <string name="new_password_update_info">5자 이상 15자 이내의 비밀번호를 입력해주세요.</string>
    <string name="one_more_password">비밀번호를 한번 더 작성해주세요</string>
    <string name="password_update_end">비밀번호가 변경되었습니다.</string>
    <string name="setting_notice_title">업데이트 실행 1.0 -> 2.0 업데이트 안내</string>
    <string name="setting_notice_date">2021.12.12</string>
    <string name="setting_notice_content">어쩌구 저쩌구가 업데이트 됨!어쩌구 저쩌구가 업데이트 됨!</string>
    <string name="write_recent_search">최근 검색</string>
    <string name="write_auto_search">관련 검색어</string>
    <string name="text_my_page_no_written_post">아직 작성한 드라이브 코스가 없습니다\n직접 나만의 드라이브 코스를\n작성해보는 것은 어떤가요?</string>
    <string name="text_my_page_no_saved_post">아직 저장한 드라이브 코스가 없습니다\n직접 나만의 드라이브 코스를\n만들어보는 것은 어떤가요?</string>
    <string name="set_start_point">출발지로 설정</string>
    <string name="set_via_point">경유지로 설정</string>
    <string name="set_end_point">도착지로 설정</string>
    <string name="txt_max_theme_cnt">테마는 3개까지만 선택할 수 있습니다.</string>
    <string name="txt_again_add_theme">테마를 추가로 선택하려면 \'선택안함\'을 취소 후 다시 선택해 주세요.</string>
    <string name="txt_check_all_input">모든 값을 입력/선택 해주세요.</string>
    <string name="txt_check_input_start_end">출발지와 도착지 모두 입력 후 추가 가능합니다.</string>
    <string name="noti_write_map">출발지와 목적지를 입력하여 경로를 확인 후, 경유지를 추가해 경로를 수정할 수 있습니다.</string>
    <string name="noti_cancel_write">게시물 작성을 중단하시겠습니까?</string>
    <string name="write_continue">이어서 작성</string>
    <string name="write_cancel">작성중단</string>
    <string name="word_no">아니오</string>
    <string name="word_yes">예</string>
    <string name="search_sub">3가지 요소 중 하나 이상만 입력해도 검색할 수 있어요!</string>
    <string name="text_confirm_delete">정말 삭제하시겠습니까?</string>
</resources>