<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!--구경하기-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.charo_android.presentation.ui.home.HomeFragment"
        android:label="@string/title_home_eng"
        tools:layout="@layout/fragment_home" />

    <!--작성하기-->
    <fragment
        android:id="@+id/navigation_write"
        android:name="com.example.charo_android.presentation.ui.write.WriteFragment"
        android:label="@string/title_write_eng"
        tools:layout="@layout/fragment_write" />

    <!--나의차로-->
    <fragment
        android:id="@+id/navigation_charo"
        android:name="com.example.charo_android.presentation.ui.charo.mypage.CharoFragment"
        android:label="@string/title_charo_eng"
        tools:layout="@layout/fragment_charo" />
</navigation>