<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data android:layout_width="wrap_content">

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/search_background">

        <ImageButton
            android:id="@+id/img_search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_close_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_search_drive"
                style="@style/HeaderH4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="23dp"
                android:text="@string/search"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            tools:layout_editor_absoluteY="126dp">

            <TextView
                android:id="@+id/text_user_id"
                style="@style/HeaderH14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:includeFontPadding="false"
                android:text="@string/search_user_id"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_search_custom"
                style="@style/HeaderH4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/search_custom"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/text_user_id"
                app:layout_constraintTop_toBottomOf="@+id/text_user_id" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/img_search_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/ic_background_white"
                android:paddingHorizontal="10dp"
                android:paddingVertical="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_search_custom">

                <TextView
                    android:id="@+id/text_today_drive"
                    style="@style/HeaderH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:includeFontPadding="false"
                    android:text="@string/today_drive"
                    android:textColor="@color/gray5_sub_495057"
                    app:layout_constraintStart_toStartOf="@+id/ll_search_area"
                    app:layout_constraintTop_toTopOf="@+id/img_search_background" />

                <TextView
                    android:id="@+id/text_today_drive_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/noto_sans_cjkkr_medium"
                    android:includeFontPadding="false"
                    android:text="@string/search_sub"
                    android:textColor="@color/gray3_sub_acb5bd"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/ll_search_area"
                    app:layout_constraintStart_toStartOf="@id/ll_search_area"
                    app:layout_constraintTop_toBottomOf="@+id/text_today_drive" />

                <LinearLayout
                    android:id="@+id/ll_search_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_today_drive_sub">

                    <TextView
                        android:id="@+id/btn_search_area_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ui_search_btn_unselect_android"
                        android:gravity="center"
                        android:text="@string/area_province"
                        android:textColor="@drawable/selector_text_color" />

                    <TextView
                        android:id="@+id/btn_search_area_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-15dp"
                        android:background="@drawable/ui_search_btn_unselect_android"
                        android:gravity="center"
                        android:text="@string/area_region"
                        android:textColor="@drawable/selector_text_color" />

                    <TextView
                        android:id="@+id/text_search_1"
                        style="@style/HeaderH4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text_1"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray5_sub_495057" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_search_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/ll_search_area"
                    app:layout_constraintTop_toBottomOf="@+id/ll_search_area">

                    <TextView
                        android:id="@+id/btn_search_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ui_search_btn_unselect_android"
                        android:gravity="center"
                        android:text="@string/main_charo_theme"
                        android:textColor="@drawable/selector_text_color" />

                    <TextView
                        android:id="@+id/text_search_2"
                        style="@style/HeaderH4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text_2"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray5_sub_495057" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_search_caution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/ll_search_theme"
                    app:layout_constraintTop_toBottomOf="@+id/ll_search_theme">

                    <TextView
                        android:id="@+id/btn_search_caution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ui_search_btn_unselect_android"
                        android:gravity="center"
                        android:text="@string/caution"
                        android:textColor="@drawable/selector_text_color" />

                    <TextView
                        android:id="@+id/text_search_3"
                        style="@style/HeaderH4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text_3"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray5_sub_495057" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_search_start"
            style="@style/SectionH1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_radius_12_mypage"
            android:gravity="center"
            android:paddingVertical="13dp"
            android:includeFontPadding="false"
            android:layout_marginHorizontal="5dp"
            android:alpha="0.9"
            android:text="@string/search_start"
            android:textColor="@color/blue_main_0f6fff"
            app:layout_constraintEnd_toEndOf="@+id/cl_search"
            app:layout_constraintStart_toStartOf="@+id/cl_search"
            app:layout_constraintTop_toBottomOf="@+id/cl_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>