<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/text_question_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:fontFamily="@font/noto_sans_cjkkr_medium"
        app:fontFamily="@font/noto_sans_cjkkr_medium"
        android:textSize="15sp"
        android:textColor="#454545"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/text_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:fontFamily="@font/noto_sans_cjkkr_medium"
        app:fontFamily="@font/noto_sans_cjkkr_medium"
        android:textSize="15sp"
        android:textColor="#2c98f0"
        android:includeFontPadding="false"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintTop_toBottomOf="@+id/text_question_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/text_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:fontFamily="@font/noto_sans_cjkkr_medium"
        app:fontFamily="@font/noto_sans_cjkkr_medium"
        android:textSize="15sp"
        android:textColor="#2c98f0"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/text_ok"
        app:layout_constraintStart_toEndOf="@+id/text_ok"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>