<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/text_question_withdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal"
            android:fontFamily="@font/noto_sans_cjkkr_medium"
            app:fontFamily="@font/noto_sans_cjkkr_medium"
            android:textSize="15sp"
            android:textColor="#454545"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_withdrawal_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:fontFamily="@font/noto_sans_cjkkr_medium"
            app:fontFamily="@font/noto_sans_cjkkr_medium"
            android:textSize="15sp"
            android:textColor="#2c98f0"
            android:includeFontPadding="false"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintTop_toBottomOf="@+id/text_question_withdrawal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/text_withdrawal_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/noto_sans_cjkkr_medium"
            app:fontFamily="@font/noto_sans_cjkkr_medium"
            android:textSize="15sp"
            android:textColor="#2c98f0"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="@+id/text_withdrawal_agreement"
            app:layout_constraintStart_toEndOf="@+id/text_withdrawal_agreement"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>